--- a/ECOlegio/Assembly-CSharp-Editor.csproj
+++ b/ECOlegio/Assembly-CSharp-Editor.csproj
@@ -483,7 +483,7 @@
      <None Include="Assets\uAdventure\Editor\Resources\EAdventureData\config_editor.xml" />
      <None Include="Assets\uAdventure\Editor\Resources\EAdventureData\create-release.xml" />
  <Reference Include="Assembly-UnityScript">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Library/ScriptAssemblies/Assembly-UnityScript.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Library/ScriptAssemblies/Assembly-UnityScript.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.CoreModule">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2017.4.33f1/Editor/Data/Managed/UnityEngine/UnityEngine.CoreModule.dll</HintPath>
@@ -687,55 +687,55 @@
  <HintPath>C:/Program Files/Unity/Hub/Editor/2017.4.33f1/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
  </Reference>
  <Reference Include="Microsoft.Msagl">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/Microsoft.Msagl.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/Microsoft.Msagl.dll</HintPath>
  </Reference>
  <Reference Include="MoreLinq">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/MoreLinq.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/MoreLinq.dll</HintPath>
  </Reference>
  <Reference Include="NetLegacySupport.Tuple">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/NetLegacySupport.Tuple.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/NetLegacySupport.Tuple.dll</HintPath>
  </Reference>
  <Reference Include="System.Threading">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/System.Threading.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/System.Threading.dll</HintPath>
  </Reference>
  <Reference Include="System.Windows.Forms">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/System.Windows.Forms.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Editor/Plugins/System.Windows.Forms.dll</HintPath>
  </Reference>
  <Reference Include="LibTess">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/LibTess.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/LibTess.dll</HintPath>
  </Reference>
  <Reference Include="UniRxUniversal">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/UniRxUniversal.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/UniRxUniversal.dll</HintPath>
  </Reference>
  <Reference Include="Ionic.Zip">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/Zip/Ionic.Zip.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/Zip/Ionic.Zip.dll</HintPath>
  </Reference>
  <Reference Include="Triangulation">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventureGeo/Plugins/Triangulation.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventureGeo/Plugins/Triangulation.dll</HintPath>
  </Reference>
  <Reference Include="System.Drawing">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventureQR/Editor/Plugins/System.Drawing.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventureQR/Editor/Plugins/System.Drawing.dll</HintPath>
  </Reference>
  <Reference Include="zxing.unity">
- <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventureQR/Plugins/zxing.unity.dll</HintPath>
+ <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventureQR/Plugins/zxing.unity.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Advertisements">
- <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.8/Editor/UnityEditor.Advertisements.dll</HintPath>
+ <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.8/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Analytics">
- <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
+ <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Analytics">
- <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/Editor/UnityEditor.Analytics.dll</HintPath>
+ <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/Editor/UnityEditor.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Purchasing">
- <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/UnityEngine.Purchasing.dll</HintPath>
+ <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Purchasing">
- <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/Editor/UnityEditor.Purchasing.dll</HintPath>
+ <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/Editor/UnityEditor.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.StandardEvents">
- <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
