--- a/ECOlegio/Assembly-CSharp.csproj
+++ b/ECOlegio/Assembly-CSharp.csproj
@@ -51,6 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\NotasFinales.cs" />
+     <Compile Include="Assets\PlayerName.cs" />
      <Compile Include="Assets\SmoothMovementWithMouse.cs" />
      <Compile Include="Assets\uAdventure\__Scripts\Bounce.cs" />
      <Compile Include="Assets\uAdventure\__Scripts\Core\Auxiliar\AllElementsWithAssets.cs" />
