--- a/ECOlegio/Assembly-CSharp.csproj
+++ b/ECOlegio/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MyTimer.cs" />
      <Compile Include="Assets\NotasFinales.cs" />
      <Compile Include="Assets\PlayerName.cs" />
      <Compile Include="Assets\SmoothMovementWithMouse.cs" />
