Contenedores como NPCs en el patio

--- a/ECOlegio/Assembly-CSharp.csproj
+++ b/ECOlegio/Assembly-CSharp.csproj
@@ -522,15 +522,18 @@
      <Compile Include="Assets\uAdventureQR\Scripts\QRScannerEffectRunner.cs" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\profPlastico.eaa.xml" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\chapter1.xml" />
+     <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\Amarillo.eaa.xml" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\profVidrio.eaa.xml" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\it_IT.xml" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\gl_ES.xml" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\en_EN.xml" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\CutsceneEmpiezaColegio.eaa.xml" />
+     <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\Azul.eaa.xml" />
      <None Include="Assets\uAdventure\Shaders\SimpleBlur.shader" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\zh_CN.xml" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\profPapel.eaa.xml" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\profOrganico.eaa.xml" />
+     <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\Marron.eaa.xml" />
      <None Include="Assets\uAdventure\Shaders\AlphaMask.shader" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\contenedorOrganico.eaa.xml" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\es_ES.xml" />
@@ -541,6 +544,7 @@
      <None Include="Assets\uAdventure\Shaders\TransitionShader.shader" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\de_DE.xml" />
      <None Include="Assets\uAdventure\Resources\CurrentGame\descriptor.xml" />
+     <None Include="Assets\uAdventure\Resources\CurrentGame\assets\animation\Verde.eaa.xml" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\pt_PT.xml" />
      <None Include="Assets\uAdventureGeo\MapzenGo\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
      <None Include="Assets\uAdventure\Resources\i18n\engine\ru_RU.xml" />
@@ -716,28 +720,28 @@
  <HintPath>C:/Program Files/Unity/Hub/Editor/2017.4.33f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
  </Reference>
  <Reference Include="LibTess">
- <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/LibTess.dll</HintPath>
+ <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/LibTess.dll</HintPath>
  </Reference>
  <Reference Include="UniRxUniversal">
- <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/UniRxUniversal.dll</HintPath>
+ <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/UniRxUniversal.dll</HintPath>
  </Reference>
  <Reference Include="Ionic.Zip">
- <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/Zip/Ionic.Zip.dll</HintPath>
+ <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventure/Plugins/Zip/Ionic.Zip.dll</HintPath>
  </Reference>
  <Reference Include="Triangulation">
- <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventureGeo/Plugins/Triangulation.dll</HintPath>
+ <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventureGeo/Plugins/Triangulation.dll</HintPath>
  </Reference>
  <Reference Include="zxing.unity">
- <HintPath>C:/Users/avr-9/Desktop/Desarrollo de Videojuegos/Juegos Serios/Prácticas/ECOlegio/ECOlegio/Assets/uAdventureQR/Plugins/zxing.unity.dll</HintPath>
+ <HintPath>D:/Nu/Documents/UCM/2019-2020/Juegos Serios/Proyectos Unity/ECOlegio/ECOlegio/Assets/uAdventureQR/Plugins/zxing.unity.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Analytics">
- <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
+ <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Purchasing">
- <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/UnityEngine.Purchasing.dll</HintPath>
+ <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.StandardEvents">
- <HintPath>C:/Users/avr-9/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/nuria/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
